--- a/styleGrid.css
+++ b/styleGrid.css
@@ -1,5 +1,6 @@
 body {
   background-color: #5eb6b5;
+  color: #fff;
 }
 
 * {
@@ -224,7 +225,7 @@ header {
 .final {
   display: flex;
   flex-direction: column-reverse;
-  background-color: #48aaa8;
+  background-color: #48AAA8;
   height: 175px;
   justify-content: center;
   align-items: center;
@@ -244,7 +245,7 @@ header {
   height: 30px;
   width: 30px;
   border-radius: 100%;
-  background-color: #5bb3b1;
+  background-color: #5BB3B1;
   padding: 10px;
 }
 
