--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,26 +1,25 @@
-/* ----------------------------------------------- footer -------------------------------------------------------- */
-  
-.final{
-    display:flex ;
+@import "_variables";
+.final {
+    display: flex;
     flex-direction: column-reverse;
     background-color: #48AAA8;
-    height: 175px; 
+    height: 175px;
     justify-content: center;
     align-items: center;
-    color: #fff;
-        ul{
-            display:flex ;
-        }
-            li{
-                margin:4px;
-                padding: 5px;
-            }
-}
-
-.final a img{
+    color: map-get($map: $colores, $key: blanco );
+        ul {
+        display: flex;
+      }
+             li {
+        margin: 4px;
+        padding: 5px;
+      }
+  }
+  
+  .final a img {
     height: 30px;
     width: 30px;
     border-radius: 100%;
     background-color: #5BB3B1;
     padding: 10px;
-}
+  }
