--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,351 +1,21 @@
-body {
-    background-color: #5eb6b5;
-    color: #fff;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
-    list-style: none;
-  }
+@import"_footer";
+@import "_header";
+@import "_ventana_contacto";
+@import "_body";
+@import "_ventana_contacto";
+@import"_boostrapGrid";
+@import"_media";
+@import"_cardIndex";
+@import"_noticias";
+@import "_productosUno";
+@import "_productosDos";
+@import "_servicios";
+@import "_atencionalcliente";
+@import "_variables";
 
-  /* ----------------------------------------------- grid index -------------------------------------------------------- 
-  .contenedor_index {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "header"
-      "main"
-      "footer";
-  }
-  header {
-    grid-area: header;
-    background-color: #5abbb9;
-  }
-  
-  main {
-    grid-area: main;
-    background-color: #5abbb9;
-  }
-  
-  footer {
-    grid-area: footer;
-  
-    background-color: #48aaa8;
-  }
-  /* ----------------------------------------------- grid servicios -------------------------------------------------------- 
-  .contenedor_servicios {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "header"
-      "main"
-      "footer";
-  }
-  header {
-    grid-area: header;
-    background-color: #5abbb9;
-  }
-  
-  main {
-    grid-area: main;
-    background-color: #5abbb9;
-  }
-  
-  footer {
-    grid-area: footer;
-  
-    background-color: #48aaa8;
-  }
-  /* ----------------------------------------------- grid productos -------------------------------------------------------- 
-  .contenedor_productos {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
-  header {
-    grid-area: header;
-    background-color: #5abbb9;
-  }
-  
-  main {
-    grid-area: main;
-    background-color: #5abbb9;
-  }
-  
-  footer {
-    grid-area: footer;
-  
-    background-color: #48aaa8;
-  }
-  
-  /* ----------------------------------------------- grid atencion al cliente -------------------------------------------------------- 
-  .contenedor_atencion_al_cliente {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
-  header {
-    grid-area: header;
-    background-color: #5abbb9;
-  }
-  
-  main {
-    grid-area: main;
-    background-color: #5abbb9;
-  }
-  
-  footer {
-    grid-area: footer;
-  
-    background-color: #48aaa8;
-  }
-  
-  /* ----------------------------------------------- grid contacto -------------------------------------------------------- 
-  .contenedor_contacto {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
-  header {
-    grid-area: header;
-    background-color: #5abbb9;
-  }
-  
-  main {
-    grid-area: main;
-    background-color: #5abbb9;
-  }
-  
-  footer {
-    grid-area: footer;
-  
-    background-color: #48aaa8;
-  }
-  /* ----------------------------------------------- grid noticia -------------------------------------------------------- 
-  .contenedor_noticia {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
-  header {
-    grid-area: header;
-    background-color: #5abbb9;
-  }
-  
-  main {
-    grid-area: main;
-    background-color: #5abbb9;
-  }
-  
-  footer {
-    grid-area: footer;
-  
-    background-color: #48aaa8;
-  }
-  
-  
-  /* ----------------------------------------------- Modificacion ventana contacto -------------------------------------------------------- */
-  
-  .background-contacto {
-    background: #5bb3b1;
-    background: linear-gradient(
-      0deg,
-      #3b9b99 0%,
-      #146463 36%,
-      #5a8382 100%,
-      rgba(243, 243, 243, 1) 100%
-    );
-    padding-top: 20px;
-  }
-  .formcontacto {
-    background: #5bb3b1;
-    background: linear-gradient(
-      0deg,
-      #5bb3b1 0%,
-      #146463 36%,
-      #5a8382 100%,
-      rgba(243, 243, 243, 1) 100%
-    );
-    color: #fff;
-    padding: 50px;
-    margin: 0 auto;
-    width: 300px;
-    box-shadow: 3px 3px 10px #5bb3b1;
-  }
-  .formcontacto div {
-    padding: 15px;
-  }
-  .formcontacto input {
-    border: #fff;
-  }
-  /* ----------------------------------------------- Servicios -------------------------------------------------------- */
-  
-  .contenedor {
-    display: flex;
-    align-items: center;
-    margin: 20px 50px;
-    /* -------- flex-wrap tira para abajo los hijos cuando ya no hay espacio ------- */
-    flex-wrap: wrap;
-  }
-  
-  .contenedor h2 {
-    color: #fff;
-  }
-  
-  .contenedor > div {
-    padding: 0 10px;
-    width: 100%;
-  }
-  
-  .contenedor div.izquierda {
-    width: 40%;
-  }
-  
-  .contenedor div.izquierda h2 {
-    font-size: 50px;
-  }
-  
-  .contenedor div.izquierda input {
-    font-size: 20px;
-    margin-right: 20px;
-    padding: 5px;
-    border: none;
-    border-radius: 50px;
-    background-color: #519695;
-    color: #fff;
-    /*transition: width 3s;
-    transition-delay: 1s;*/
-  }
-  .contenedorBotones {
-    display: flex;
-  }
-  .contenedor div.izquierda input:hover {
-    width: 300px;
-  }
-  .contenedor div.derecha {
-    width: 55%;
-   /* transition: width 2s, height 2s, transform 2s;*/
-  }
-  
-  
-  .contenedor img {
-    width: 100%;
-    /*argin: 0 40px;*/
-    height: 700px;
-    /*object-fit: cover;
-    object-position: bottom;*/
-  }
-  
-  .contenedor p {
-    line-height: 2;
-    color: #fff;
-    font-size: 22px;
-  }
-  
-  /* ----------------------------------------------- Seccion productos -------------------------------------------------------- */
-  
-  .ProductosProd h2 {
-    font-size: 50px;
-    color: #fff;
-    text-align: center;
-  }
-  .contenedorProductos {
-    display: flex;
-  }
-  .contenedorBotonesProductos {
-    display: flex;
-    flex-flow: column;
-    width: 50%;
-    margin: 20px 50px;
-  }
-  
-  .contenedorProductos input {
-    padding: 20px;
-    border: none;
-    border-radius: 50px;
-    background-color: #519695;
-    color: #fff;
-    font-size: 20px;
-  }
-  
-  /* ----------------------------------------------- Seccion productos otra pagina -------------------------------------------------------- */
-  /*.ProductosSeccionProductos {
-    margin: 100px;
-  }*/
-  
-  .ProductosSeccionProductos h2 {
-    font-size: 70px;
-    color: #fff;
-    text-align: center;
-  }
-  
-  .ProductosSeccionProductos h3 {
-   /* font-size: 50px;*/
-    color: #fff;
-    text-align: center;
-  }
-  .ProductosSeccionProductos p {
-    text-align: center;
-    margin: 25px 400px;
-  }
-  
-  .ProductosSeccionProductos input {
-    margin-top: 20px;
-    padding: 20px;
-    border: none;
-    border-radius: 50px;
-    background-color: #519695;
-    color: #fff;
-    font-size: 40px;
-  }
-  .atencionAlCliente {
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .atencionAlCliente h2 {
-    font-size: 70px;
-  }
-  
-  .atencionAlCliente p {
-    margin: 20px 0px;
-  }
-  
-  .atencionAlCliente input {
-    padding: 20px;
-    border: none;
-    border-radius: 50px;
-    background-color: #fff;
-    margin-top: 30px;
-    font-size: 25px;
-    color: #519695;
-  }
-  .navegacion_mobile {
-    display: none;
-  }
+
+
+
+
 
 
