--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,12 +1,12 @@
 @import "_variables";
 body {
-    background-color: #5eb6b5;
-    color: map-get($map: $colores, $key: blanco );
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
-    list-style: none;
-  }
+  background-color: map-get($map: $colores, $key: turquesaseis);
+  color: map-get($map: $colores, $key: blanco);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  list-style: none;
+}
