--- a/scss/_boostrapGrid.scss
+++ b/scss/_boostrapGrid.scss
@@ -1,14 +1,14 @@
 @import "_variables";
 .container {
-  color: map-get($map: $colores, $key: blanco );
+  color: map-get($map: $colores, $key: blanco);
   font-size: 40px;
-  text-align: center
+  @include text-aling;
 }
-.row{
+.row {
   border-radius: 10px;
   margin-top: 20px;
 }
-.col-4{
-background-color: map-get($map: $colores, $key: turquesaUno );;
-border-radius: 50px;
+.col-4 {
+  background-color: map-get($map: $colores, $key: turquesauno);
+  border-radius: 50px;
 }
