--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,16 +1,16 @@
 @import "_variables";
 .header {
-  background-color: #48AAA8 !important;
+  background-color: map-get($map: $colores, $key: turquesatres) !important;
   z-index: 3;
 }
 
 .navbar {
-  background-color: #48AAA8 !important;
+  background-color: map-get($map: $colores, $key: turquesatres) !important;
 }
 
 .nav-link:hover {
-  background-color: #146463 !important;
-  color: map-get($map: $colores, $key: blanco ) !important;
+  background-color: map-get($map: $colores, $key: turquesacuatro) !important;
+  color: map-get($map: $colores, $key: blanco) !important;
 }
 
 header {
@@ -19,12 +19,12 @@ header {
 }
 
 .navegacion {
-  display: flex;
-  background-color: #48AAA8 !important;
+  @include display-flex;
+  background-color: map-get($map: $colores, $key: turquesatres) !important;
   justify-content: space-between;
-  align-items: center;
+  @include text-aling;
   ul {
-    display: flex;
+    @include display-flex;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -35,24 +35,19 @@ header {
     margin: 4px;
     padding: 5px;
     &:hover {
-      border-top: 3px solid map-get($map: $colores, $key: blanco );
-      border-bottom: 3px solid map-get($map: $colores, $key: blanco );
+      border-top: 3px solid map-get($map: $colores, $key: blanco);
+      border-bottom: 3px solid map-get($map: $colores, $key: blanco);
     }
-       a {
+    a {
       text-decoration: none;
-      color: map-get($map: $colores, $key: blanco );
+      color: map-get($map: $colores, $key: blanco);
       border-radius: 15%;
-      }
+    }
   }
 }
-
-
 
 .navegacion li .buscador {
   width: 30px;
   height: 30px;
   border-radius: 10%;
 }
-
-
-
