--- a/scss/_noticias.scss
+++ b/scss/_noticias.scss
@@ -1,43 +1,44 @@
 @import "_variables";
-.titulo-1{
-    font-size: 25px;
-    padding-top: 70px;
+.titulo-1 {
+  font-size: 10px;
+  padding-top: 70px;
 }
-.titulo-1 h2{
-    text-align: center;
-    color: map-get($map: $colores, $key: blanco );
+.titulo-1 h2 {
+  @include text-aling;
+  color: map-get($map: $colores, $key: blanco);
 }
-.contenedor-servicios{
-    display: flex ;
-    flex-direction: row;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 150px;
-    padding-left: 80px;
-    padding-right: 80px;
+.contenedor-servicios {
+  @extend %categorias;
+  flex-direction: row;
+  padding-top: 20px;
+  padding-bottom: 150px;
+  padding-left: 80px;
+  padding-right: 80px;
 }
-.productos{
-    text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
-    box-shadow: 1px 1px 10px rgb(155, 155, 155);
-    margin: 10px;
+.productos {
+  @include text-aling;
+  padding-left: 50px;
+  padding-right: 50px;
+  box-shadow: 1px 1px 10px map-get($map: $colores, $key: blancotres);
+  margin: 10px;
 }
-
-.productos-1 img{
-    width: 150px;
-    box-shadow: 1px 1px 10px #5f5f5f;
+.productos-1 img {
+  width: 150px;
+  box-shadow: 1px 1px 10px map-get($map: $colores, $key: gris);
 }
-.productos h1{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color:rgb(253, 253, 253);
+.productos h1 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 35px;
+  color: map-get($map: $colores, $key: blancodos);
 }
-.servicios a, .productos a{
-    text-decoration: none;
+.servicios a,
+.productos a {
+  text-decoration: none;
 }
-.servicios p, .productos p{
-    padding: 20px;
-    color: rgb(253, 253, 253);
-    font-size: 18px;
+.servicios p,
+.productos p {
+  padding: 20px;
+  color: map-get($map: $colores, $key: blancodos);
+  font-size: 18px;
 }
