--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -1,63 +1,52 @@
 @import "_variables";
 .contenedor {
-    display: flex;
-    align-items: center;
-    margin: 20px 50px;
-    /* -------- flex-wrap tira para abajo los hijos cuando ya no hay espacio ------- */
-    flex-wrap: wrap;
-    h2{
-        color: map-get($map: $colores, $key: blanco );
-      }
-    img{
-        width: 100%;
-        /*argin: 0 40px;*/
-        height: 700px;
-        /*object-fit: cover;
-        object-position: bottom;*/
-      }
-    p{
-        line-height: 2;
-        color: map-get($map: $colores, $key: blanco );
-        font-size: 22px;
-      }
+  @extend %categorias;
+  margin: 20px 50px;
+  flex-wrap: wrap;
+  h2 {
+    color: map-get($map: $colores, $key: blanco);
   }
-  
-  .contenedor > div {
-    padding: 0 10px;
+  img {
     width: 100%;
+    height: 700px;
   }
-  
-  .contenedor div.izquierda {
-    width: 40%;
-    
+  p {
+    line-height: 2;
+    color: map-get($map: $colores, $key: blanco);
+    font-size: 22px;
   }
-  
-  .contenedor div.izquierda h2 {
-    font-size: 50px;
+}
+
+.contenedor > div {
+  padding: 0 10px;
+  width: 100%;
+}
+
+.contenedor div.izquierda {
+  width: 40%;
+}
+
+.contenedor div.izquierda h2 {
+  font-size: 50px;
+}
+
+.contenedor div.izquierda input {
+  font-size: 20px;
+  margin-right: 20px;
+  padding: 5px;
+  border: none;
+  border-radius: 50px;
+  background-color: map-get($map: $colores, $key: turquesauno);
+  color: map-get($map: $colores, $key: blanco);
+  &:hover {
+    width: 300px;
   }
-  
-  .contenedor div.izquierda input {
-    font-size: 20px;
-    margin-right: 20px;
-    padding: 5px;
-    border: none;
-    border-radius: 50px;
-    background-color: #519695;
-    color: map-get($map: $colores, $key: blanco );
-        &:hover {
-        width: 300px;
-        }
-    /*transition: width 3s;
-    transition-delay: 1s;*/
-  }
-  
-  .contenedorBotones {
-    display: flex;
-  }
-  
-  
-  .contenedor div.derecha {
-    width: 55%;
-    /* transition: width 2s, height 2s, transform 2s;*/
-  }
-  
+}
+
+.contenedorBotones {
+  @include display-flex;
+}
+
+.contenedor div.derecha {
+  width: 55%;
+}
